# lechatnoir-linux

./: .gitignore  ASSETS.md  Cargo.toml  README.md
.github/workflows/: flatpak.yml
crates/lcn-app/: Cargo.toml
crates/lcn-app/src/: main.rs
crates/lcn-app/src/design/: brand.rs  mod.rs  style.css  theme.rs
crates/lcn-app/src/player/: controller.rs  mod.rs  mpris.rs
crates/lcn-app/src/services/: data_store.rs  mod.rs  net.rs  settings.rs
crates/lcn-app/src/ui/: image.rs  mod.rs  player_bar.rs  root.rs  section.rs  sidebar.rs
crates/lcn-app/src/ui/screens/: about.rs  history.rs  home.rs  mod.rs  news.rs  schedule.rs  voices.rs
crates/lcn-core/: Cargo.toml
crates/lcn-core/snapshots/: news.json  schedule.json  voices.json
crates/lcn-core/src/: antenne.rs  clock.rs  config.rs  content.rs  lib.rs  player.rs
crates/lcn-core/src/services/: current_show.rs  history.rs  mod.rs  news.rs  now_playing.rs  schedule.rs  snapshot.rs  voices.rs
data/: fr.lechatnoirradio.Player.desktop  fr.lechatnoirradio.Player.gschema.xml  fr.lechatnoirradio.Player.metainfo.xml
flathub-submission/: README.md  fr.lechatnoirradio.Player.yml
flatpak/: FLATHUB-CHECKLIST.md  cargo-sources.json  fr.lechatnoirradio.Player.yml
